<resources>
    <string name="app_name">"PME16_crafting_game "</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bnt_start">Spielen</string>
    <string name="bnt_highscore">Highscore</string>
    <string name="btn_inventory">Inventar</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_shop">Shop</string>
    <string name="txt_score">Punkte: 0</string>
    <string name="txt_time">Zeit: 0:00:00</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to game -->
    <string name="game_points">Punkte: </string>
    <string name="game_time">Zeit: </string>

    <!-- Strings related to highscore -->
    <string name="heading_highscore">Highscore</string>

    <!-- Strings related to inventory -->
    <string name="inventory_heading">Inventar</string>

    <!-- Strings related to shop -->
    <string name="shop">Shop</string>

    <!-- Strings related to registration -->
    <string name="registration">Registrierung</string>
    <string name="register">Registrieren</string>
    <string name="placeholder_username">Benutzername</string>
    <string name="placeholder_password">Passwort</string>
    <string name="placeholder_password_confirm">Passwort bestätigen</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
