<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ferdi.david.tim.pme16_crafting_game.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login"
            android:id="@+id/login_heading"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_login"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/placeholder_username"
        android:layout_margin="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_login"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_password"
        android:layout_margin="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnSignUp"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btnSignIn"
            android:layout_margin="20dp" />
    </LinearLayout>

</LinearLayout>